apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-master-01

      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
            - containerPort: 6881
          volumeMounts:
            - name: qbit-config
              mountPath: /config
            - name: media-volume
              mountPath: /data
      volumes:
        - name: qbit-config
          persistentVolumeClaim:
            claimName: qbit-config-pvc
        - name: media-volume
          hostPath:
            path: /mnt/plex-media/data
            type: Directory
